# client

./: .coderabbit.yaml  Makefile  README.md  go.mod  go.sum
.github/workflows/: esp-speaker-netsender-build.yaml  esp_idf.yml  toolchain-clang-linux.cmake
arduino/: README.md
arduino/9dof-netsender/: 9dof-netsender.ino
arduino/bin-netsender/: bin-netsender.ino
arduino/esp-idf-eth/: CMakeLists.txt
arduino/esp32_eth/: esp32_eth.ino
arduino/gpio-netsender/: gpio-netsender.ino
arduino/netsender/: NetSender.cpp  NetSender.h  config.h  handlers.cpp  nonarduino.h  offline.cpp  online.cpp
arduino/speaker-netsender/: speaker-netsender.ino
arduino/temp-netsender/: DHT.cpp  DHT.h  NetSender.cpp  Netsender.h  SDLWeather.cpp  SDLWeather.h  calibrator.cpp  calibrator.h  config.h  dallas_temp.h  gps.h  handlers.cpp  offline.cpp  online.cpp  pin_safety.h  sensor.h  temp-netsender.ino  tsl2591.h
arduino/weather-netsender/: SDLWeather.cpp  SDLWeather.h  weather-netsender.ino
esp/esp/: README.md
esp/remote_esp_tool/: go.mod  main.go
esp/speaker-netsender/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig
esp/speaker-netsender/components/gtest/: CMakeLists.txt
esp/speaker-netsender/components/netsender/: CMakeLists.txt  Kconfig.projbuild  netsender.cpp
esp/speaker-netsender/components/netsender/include/: netsender.hpp
esp/speaker-netsender/components/netsender/tools/: gen_vars.py
esp/speaker-netsender/main/: CMakeLists.txt  Kconfig.projbuild  audio.cpp  ethernet.cpp  idf_component.yml  main.cpp  sd.cpp  self_check.cpp  variables.json
esp/speaker-netsender/main/include/: audio.hpp  ethernet.hpp  globals.h  log.hpp  netsender_vars.hpp  sd.hpp  self_check.hpp
esp/udp_log_viewer/: .gitignore  go.mod  main.go
pi/: README.md
pi/gpio/: gpio.go
scripts/: move-netsender.sh
shell/: shell-netsender.sh
(+96 files in other folders)
